Refactor PhoneDictionary,PhoneDictionaryTest, PriorityQueue, PriorityQueueTest and DepartmentsTest classes